<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DoX</string>
    <string name="task_title">Title</string>
    <string name="task_desc">Description</string>
    <string name="task_pri">Priority</string>
    <string-array name="task_pris">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Critical</item>
    </string-array>
    <string name="task_due">Due date</string>
    <string name="task_repeat">Repeat</string>
    <string-array name="task_repeat_presets">
        <item>No repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Fortnightly</item>
        <item>Custom</item>
    </string-array>
    <string-array name="task_repeat_froms">
        <item>From completion</item>
        <item>From due date</item>
    </string-array>
    <string name="task_tags">Tags</string>
    <string name="date_set">Set</string>
    <string name="date_clear">Clear</string>
    <string name="task_repeat_days">Days</string>
    <string name="task_repeat_none">No repeat</string>
</resources>
