<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pw_layout_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay" >
    
    <LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="10dp" >
	
	    <EditText
	        android:id="@+id/at_edit_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/task_title"
	        android:inputType="text" >
	
	        <requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/at_edit_desc"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/task_desc"
	        android:inputType="textCapSentences|textImeMultiLine|textMultiLine" />
	
	    <Spinner
	        android:id="@+id/at_spin_pri"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:entries="@array/task_pris"
	        tools:listitem="@android:layout/simple_spinner_item" />
	
	    <LinearLayout
	        android:id="@+id/at_layout_due"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <EditText
	            android:id="@+id/at_edit_due"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:clickable="false"
	            android:cursorVisible="false"
	            android:ems="10"
	            android:focusable="false"
	            android:focusableInTouchMode="false"
	            android:hint="@string/task_due"
	            android:inputType="datetime" />
	
	        <Button
	            android:id="@+id/at_button_due_set"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/date_set" />
	
	        <Button
	            android:id="@+id/at_button_due_clear"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:enabled="false"
	            android:text="@string/date_clear" />
	
	    </LinearLayout>
	
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="Set repeat..." />
	
	    <EditText
	        android:id="@+id/at_edit_tags"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/task_tags"
	        android:inputType="text" />
	
	</LinearLayout>

</ScrollView>
